--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,22 @@
         class="btn btn-primary"
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
+
+      <!-- Do the odd list if odd, using *ngIf -->
       <ul class="list-group">
         <div *ngIf="onlyOdd">
+          <li
+            class="list-group-item"
+            [ngClass]="{odd: number %2 !=0}"
+            [ngStyle]="{backgroundColor: number %2 !== 0 ? 'yellow' : 'transparent'}"
+            *ngFor="let number of oddNumbers"
+          >
+            {{number}}
+          </li>
+        </div>
+
+        <!-- Do the odd list a 2nd time, using our custom appUnless directive, unless its even -->
+        <div *appUnless="!onlyOdd">
           <li
             class="list-group-item"
             [ngClass]="{odd: number %2 !=0}"
@@ -54,9 +68,15 @@
       >
         Better Style Test
       </p>
-      <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
-      </ng-template>
+
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchCase="100">Value is 1000</p>
+        <p *ngSwitchDefault>Value is Default</p>
+      </div>
+
     </div>
   </div>
 </div>
